[package]
authors = ["Brian L. Troutwine <blt@postmates.com>",
           "Tom Santero <tom.santero@postmates.com>"]
description = "A telemetry and logging aggregation server."
keywords = ["statsd", "graphite", "telemetry", "logging", "metrics"]
license = "MIT"
name = "cernan"
readme = "README.md"
repository = "https://github.com/postmates/cernan"
version = "0.8.6"

[[bin]]
name = "cernan"
doc = false

[dependencies]
byteorder = "1.0"
chrono = "0.4"
clap = "2.27"
coco = "0.3"
elastic = "0.20"
elastic_types = "0.20"
fern = "0.4"
flate2 = "0.2"
glob = "0.2.11"
hopper = "0.3"
hyper = "0.10"
lazy_static = "1.0"
libc = "0.2"
log = "0.3"
lua = { git = "https://github.com/blt/rust-lua53.git", branch = "master" }
openssl-probe = "0.1"
protobuf = "1.4"
quantiles = { version = "0.7", features = ["serde_support"] }
rand = "0.3"
regex = "0.2"
rusoto_core = "0.30"
rusoto_firehose = "0.30"
seahash = "3.0"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
slab = "0.4"
toml = "0.4"
url = "1.6"
uuid = {version = "0.5", features = ["v4"]}
chan-signal = "0.3.1"
mio = "0.6.11"
tiny_http = "0.5.8"
serde-avro = "0.5.0"
base64 = "0.9.0"
rusoto_kinesis = "0.30.0"

[dev-dependencies]
tempdir = "0.3"
quickcheck = "0.4"

[profile.dev]
codegen-units = 4

[profile.release]
lto = true
codegen-units = 1
