[package]
authors = ["Brian L. Troutwine <blt@postmates.com>",
           "John Koenig <john@postmates.com>",
           "Tom Santero <tom.santero@postmates.com>"]
description = "A telemetry and logging aggregation server."
keywords = ["statsd", "graphite", "telemetry", "logging", "metrics"]
license = "MIT"
name = "cernan"
readme = "README.md"
repository = "https://github.com/postmates/cernan"
version = "0.8.17-pre"

[[bin]]
name = "cernan"
doc = false

[dependencies]
base64 = "0.9.0"
byteorder = "1.0"
chan-signal = "0.3.1"
chrono = "0.4"
clap = "2.27"
coco = "0.3"
elastic = "0.20"
elastic_types = "0.20"
fern = "0.5"
flate2 = "1.0"
futures = "0.1.17"
glob = "0.2.11"
hopper = "0.4"
hyper = "0.10" # 0.10 specifically required by rusoto_kinesis' KinesisClient
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
mond = "0.1"
mio = "0.6.11"
openssl-probe = "0.1"
protobuf = "1.4"
quantiles = { version = "0.7", features = ["serde_support"] }
rand = "0.4"
rdkafka = "0.14.0"
regex = "0.2"
rusoto_core = "0.30"
rusoto_firehose = "0.30"
rusoto_kinesis = "0.30.0"
seahash = "3.0"
serde = "1.0"
serde-avro = "0.5.0"
serde_derive = "1.0"
serde_json = "1.0"
slab = "0.4"
tiny_http = "0.5.8"
toml = "0.4"
url = "1.6"
uuid = {version = "0.5", features = ["v4"]}

[dev-dependencies]
tempdir = "0.3"
quickcheck = "0.6"
criterion = "0.1"
rand = "0.4"

[profile.dev]
codegen-units = 4

[profile.release]
lto = true

[[bench]]
name = "buckets"
harness = false

[[bench]]
name = "protocols_statsd"
harness = false

[[bench]]
name = "protocols_graphite"
harness = false
